another one bites the dust

--- a/home.html
+++ b/home.html
@@ -16,6 +16,10 @@
 
     <h1 id="title">Lights Out!</h1>
 
+    <h3 id="score"> score goes here</h3>
+
+    <button id="reset">Click to Reset</button>
+
     <ul class="grid">
 
       <li id="0"></li>
@@ -34,13 +38,15 @@
       <li id="13"></li>
       <li id="14"></li>
       <li id="15"></li>
-  <!--     <li class="gridBoxes" id="9"></li>
-      <li class="gridBoxes" id="10"></li>
-      <li class="gridBoxes" id="11"></li>
-      <li class="gridBoxes" id="12"></li>
-      <li class="gridBoxes" id="13"></li>
-      <li class="gridBoxes" id="14"></li>
-      <li class="gridBoxes" id="15"></li> -->
+   <!--    <li id="16"></li>
+      <li id="17"></li>
+      <li id="18"></li>
+      <li id="19"></li>
+      <li id="20"></li>
+      <li id="21"></li>
+      <li id="22"></li>
+      <li id="23"></li>
+      <li id="24"></li> -->
 
     </ul>  
 
@@ -52,16 +58,29 @@
 
 
 <!-- bonuses: random start up sequence with pulsating lights 
-make turn counter
-split into functions
-level up functionality - how woudl the extra size board work - from visual and logic perspective??
-add a restart level function
-
+make turn counter - done!
+split into functions - done!
+level up functionality - how woudl the extra size board work - from visual and logic perspective?? - logic done, now consider visual
+add a restart level function - done
+on click functions - animate the counter, the clicked square and the other 
 
 delay on mouse click with jquery and then fade out with related Tiles on a slightly faster fadeIn
 puslating lights
 rotate lights
+make responsive
 
-split the code up into 
+ambient background which gradually changes colors
+on click flip the tiles and their relative ones with jquery animations
+
+split the code up into smaller scripts? 
+
+UX:
+
+on load, create a div which covers most of screen explaining instructions and an okay button. On button click fade the div into the background/change the z-index. alternatively instead of okay button have a button which chooses grid size.
+
+ga
+
+
+
 
 -->
