--- a/home.html
+++ b/home.html
@@ -9,7 +9,6 @@
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
-  <script src="https://cdn.rawgit.com/nnattawat/flip/v1.0.19/dist/jquery.flip.min.js"></script>
   <script src="./js/jquery.ambiance.js"></script>
   <script src="./js/app.js"></script>
 
@@ -21,57 +20,14 @@
     <h1 id="title">Lights Out</h1><br><br>
 
     <p id="score"> click the board to start</p><br>
-    <p id=""> click the board to start</p><br>
-
-    <p id="remainingTiles"> level one</p><br>
-
-    <button id="reset">Click to Reset</button><br><br>
-
-    <button id="4X4">4X4</button>
 
     <ul class="grid">
-
-      <li id="0"></li>
-      <li id="1"></li>
-      <li id="2"></li>
-      <li id="3"></li>
-      <li id="4"></li>
-      <li id="5"></li>
-      <li id="6"></li>
-      <li id="7"></li>
-      <li id="8"></li>
-      <li id="9"></li>
-      <li id="10"></li>
-      <li id="11"></li>
-      <li id="12"></li>
-      <li id="13"></li>
-      <li id="14"></li>
-      <li id="15"></li>
-      <li id="16"></li>
-      <li id="17"></li>
-      <li id="18"></li>
-      <li id="19"></li>
-      <li id="20"></li>
-      <li id="21"></li>
-      <li id="22"></li>
-      <li id="23"></li>
-      <li id="24"></li>
-    <!--   <li id="25"></li>
-      <li id="26"></li>
-      <li id="27"></li>
-      <li id="28"></li>
-      <li id="29"></li>
-      <li id="30"></li>
-      <li id="31"></li>
-      <li id="32"></li>
-      <li id="33"></li>
-      <li id="34"></li>
-      <li id="35"></li> -->
 
     </ul>  
 
   </div>
 
+  <button id="reset">Click to Reset</button><br><br>
 
 </body>
 </html> 
@@ -79,18 +35,37 @@
 
 <!-- bonuses: random start up sequence with pulsating lights - http://jsoverson.github.io/jquery.pulse.js/
 
+issues - can't restart and size another grid as the main code block isnt being executed 
+
+                    __          __                              
+   ____  ___  _  __/ /_   _____/ /____  ____  _____             
+  / __ \/ _ \| |/_/ __/  / ___/ __/ _ \/ __ \/ ___/  ______     
+ / / / /  __/>  </ /_   (__  ) /_/  __/ /_/ (__  )  /_____/     
+/_/ /_/\___/_/|_|\__/  /____/\__/\___/ .___/____/               
+                                    /_/                         
+
+1 - add z index divs which fade in and out - consider UX for when to make divs visible and with what content.
+
+2.
+
+
+
+a name! go green? 
+
 when hasWon is true (ie when you;ve won) make all the squares in the grid flash.
 
-level up functionality - how would the extra size board work - from visual and logic perspective?? - logic done, now consider visual. 
+use a constructor to create audio instance objects and assign to click events
+
+level up functionality - how would this work?
 
 pulsating lights - http://jsoverson.github.io/jquery.pulse.js/
 rotate lights
 make responsive
 
+switch color scheme mode
+
 logic so that if reset the messages change to something different than loadup messages.
 
-ambient background which gradually changes colors
-on click flip the tiles and their relative ones with jquery animations
 
 split the code up into smaller scripts? 
 
@@ -123,8 +98,12 @@ on load, create a div which covers most of screen explaining instructions and an
 sketch how i want page to look with what interactive features- scoreboards, links to social media - tweet your score, player indicator, animations, z-index hidden divs and how they come onto & off screen.
 
 
+an ambient color changer based upon the click/tilesRemaining ratio - will change depending on ratio
 
 
+color themes: dark background -black grey hues. grid looks much better like this!
+
+tweak ambient colors in abient.js
 
 
 -->
