--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
   <div class="container">
 
-    <h1 id="title">Lights Out</h1><br><br>
+    <h1 id="title">LITESWEEPER</h1><br><br>
 
     <p id="score"> click the board to start</p><br>
 
@@ -27,7 +27,7 @@
 
   </div>
 
-  <button id="reset">Click to Reset</button><br><br>
+  <div id="reset">Click to Reset</div><br><br>
 
 </body>
 </html> 
@@ -46,7 +46,7 @@ issues - can't restart and size another grid as the main code block isnt being e
 
 1 - add z index divs which fade in and out - consider UX for when to make divs visible and with what content.
 
-2. a name! go green? 
+2. a name! litesweeper?
 
 3. user experience flow - sketch out how i want page to look like, (consider responsive too) and then 
 
@@ -67,15 +67,15 @@ sketch how i want page to look with what interactive features- scoreboards, link
 
 7. split the code up into smaller scripts? 
 
-8. make responsive
+8. make responsive - have tested on chrome dev tools and works on an ipad. haven't considered media queries yet - on smaller screen shrink the ul container height and width and also the border design font size.
 
 9. styling
   a) fonts
-  b) color themes: dark background -black grey hues. grid looks much better like this!
+  b) color themes: dark background -black grey hues. grid looks much better like this! further note. add a couple of bright colors in there which wont clash with red or green
 
 easter eggs:
 switch color scheme mode
-jquery flip on clicked tile?
+make button presses look better
 logic so that if reset the messages change to something different than loadup messages.
 scrolling background image?
 on win header gets biggers and flies into middle of screen
