--- a/home.html
+++ b/home.html
@@ -27,9 +27,9 @@
 
   </div>
 
-  <div id="reset">click to Reset</div><br><br>
+  <div id="reset">click to reset</div><br><br>
 
-  <div id="instructions">the <strong>aim of the game</strong> is to turn the board from green to red by pressing on the lites. There's a twist though - each click will toggles the clicked lite and also its adjacent lites green/red. The board needs to be all green to win before you run out of clicks. Good luck!</div>
+  <div id="instructions">the <strong>aim of the game</strong> is to turn the board from green to red by pressing on the lites. There's a twist though - each click will toggle the clicked lite and also its adjacent lites green/red. The board needs to be all green to win before you run out of clicks. Good luck!</div>
 
 </body>
 </html> 
