--- a/home.html
+++ b/home.html
@@ -22,10 +22,14 @@
     <p id="score"> click the board to start</p><br>
 
     <ul class="grid">
-
+      
     </ul>  
 
   </div>
+
+  <audio id ="clickSound" src = "sound/click.wav" autoplay>
+    Your browser does not suppor the HTML 5 audio tag
+  </audio>
 
   <div id="reset">click to reset</div><br><br>
 
