final comit befor eleaving second home

--- a/home.html
+++ b/home.html
@@ -4,7 +4,6 @@
   <title>LITESWEEPER</title>
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/app.css">
   
 
@@ -39,9 +38,9 @@
 </html> 
 
 
-<!-- contains log of required next steps:
+<!-- log
 
-issues - can't restart and size another grid as the main code block isnt being executed  - would it work if i wrap main code in function and then call the function everytime a reset/board size change call was initiated?
+issues - 
 
 font doesnt work when deployed onto heroku
                     __          __                              
