--- a/home.html
+++ b/home.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>   litesweeper</title>
+  <title>litesweeper</title>
   <link rel="icon" href="fav2.ico">
 
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/app.css">
   
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
   <script src="./js/jquery.ambiance.js"></script>
   <script src="./js/app.js"></script>
 
 </head>
 <body>
+
+  <!-- <audio id ="clickSound" src = "sound/click.wav" autoplay mute>
+    Your browser does not suppor the HTML 5 audio tag
+  </audio> -->
 
   <div class="container">
 
@@ -27,10 +30,6 @@
     </ul>  
 
   </div>
-
-  <audio id ="clickSound" src = "sound/click.wav" autoplay>
-    Your browser does not suppor the HTML 5 audio tag
-  </audio>
 
   <div id="welcome">
     <h2 id="welcomeMessage">welcome to litesweeper</h2><br><br><br>
@@ -49,7 +48,7 @@
 
   <div id="instructions">the <strong>aim of the game</strong> is to turn the board from red to green by pressing on the lites. There's a twist though - each click will toggle the clicked lite and also its adjacent lites green/red. The board needs to be all green to win before you run out of clicks. You have 3 lives and can reset the board if you wish but it'll cost you a life. Good luck!</div><br><br><br>
 
-  <div id="player1 score">placeholder for p1 score</div>
+  <div id="playerScoreboard">placeholder for score</div>
 
 </body>
 </html> 
@@ -60,6 +59,10 @@
 issues - 
 
 one extra click is required to register you've run out of clicks. ie. the counter says 0 and yet you need to click once more to get the welcome message back
+
+logic is broken once lives is 0 - message still begins with wise deciosn. need control flow in code to say if lives = 0 say another message.
+
+when you run out of lives display a new message and allso make scoreboard float intomiddle of screen
 
 
 
@@ -73,6 +76,7 @@ one extra click is required to register you've run out of clicks. ie. the counte
 
 2. game logic - add the score and level completed to an array/obj where it can 
 
+3. add a toggle which displays the grid size selector.
 
 1 - user flow
 
