another one bites the dust

--- a/home.html
+++ b/home.html
@@ -102,6 +102,11 @@ these dd menus should resize for mobile view
   sound on start
   d)monserrat font chain for backup fonts.
 
+  // function clickSound(){
+  //   var audio = document.getElementById("clickSound");
+  //   audio.play();
+  // } 
+
   b) color themes for ambient background: dark background -black grey hues. grid looks much better like this! further note. add a couple of bright colors in there which wont clash with red or green.
 
 
